  * ps: no longer fails with many pids & the 'p' option    issue #387
  * ps.1: cols and collums alias width option              Debian #926361
  * ps.1: Add format equivalents                           Debian #925437
  * ps: avoid potential segfault due to library race       issue #380
  * ps: Fix -ad option conflict                            issue #395
  * slabtop: Increase column width                         Debian #959375
  * sysctl: Return error if EPERM or EISDIR                merge !228
  * sysctl: Use options after --system                     Debian #978989
  * top: provides for ignoring configuration file(s)       issue #365
  * top: fix legacy configuration file vulnerability       issue #384
  * top: added a new help screen for specialized keys
  * top: avoid potential segfault due to library race      issue #390
  * top: new feature to show physical core percentages
  * w: Add terminal mode to show all terminal sessions     issue #375
  * w: Use process TTY as backup for user TTY              Debian #1080335
  * w: Use correct return value for sd_get_sessions        Debian #1068904
  * w: Don't check for sd_booted                           Debian #1108549
  * watch: Add --follow option                             Debian #469156
  * watch: 256 color support                               issue #44
  * watch.1: Warn about -d permanent option                Debian #883638

procps-ng-4.0.5
---------------
  * library
    increment current, revision and age to 0: 1:0:0
    internal: days/users when value is 0                   issue #303
    internal: dont print 60s but increment minute          issue #302
    internal: stat api fixed remaining cpu distortions     issue #321
    internal: only count user sessions
    internal: Recover from meminfo seek using LXC          Debian #1072831
    internal: stat api no longer counts guest tics twice   issue #339
    external: zswap & zswapped added to meminfo api
    external: schedule class added to pids api